<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:text="@string/sukkur_placeholder"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="20dp"
            android:text="@string/date_placeholder"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city_name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_settings"
            android:layout_width="@dimen/_58dp"
            android:layout_height="@dimen/_58dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_city_name"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_gear" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_main_condition"
            android:layout_width="@dimen/_180dp"
            android:layout_height="@dimen/_180dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="108dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            app:srcCompat="@drawable/ic_windy_large" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="176dp"
            android:text="@string/temp_placeholder"
            android:textColor="#000000"
            android:textSize="64sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_main_condition" />

        <TextView
            android:id="@+id/tv_main_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginEnd="170dp"
            android:text="@string/condition_placeholder"
            android:textSize="@dimen/_22sp"
            android:textColor="@color/colorOceanBlue"
            android:padding="@dimen/_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_temperature"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llc_meta_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_condition">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llc_wind_speed_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_wind_speed_sign"
                    android:layout_width="@dimen/_28dp"
                    android:layout_height="@dimen/_28dp"
                    app:srcCompat="@drawable/ic_wind_speed_direction" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_wind_speed_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llc_wind_direction_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_wind_direction_sign"
                    android:layout_width="@dimen/_28dp"
                    android:layout_height="@dimen/_28dp"
                    app:srcCompat="@drawable/ic_wind_direction_sign" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_wind_direction_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_direction_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llc_humidity_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_humidity_sign"
                    android:layout_width="@dimen/_28dp"
                    android:layout_height="@dimen/_28dp"
                    app:srcCompat="@drawable/ic_humidity_sign" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_placeholder"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llc_max_temp_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_max_temp_sign"
                    android:layout_width="@dimen/_28dp"
                    android:layout_height="@dimen/_28dp"
                    app:srcCompat="@drawable/ic_thermometer_sign" />

                <TextView
                    android:id="@+id/tv_max_temp_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fake_temp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_18sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_forecast"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llc_meta_container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>